use is empty for compatible check